# PEBS_Nesting_AI

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DEPLOY.md  README.md  deploy.sh  docker-compose.yml  package.json  智能排料智能体系统 项目设计文档.docx
backend/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
backend/app/: amiba.py  amiba_projects.py  config.py  export_report.py  llm_config.py  main.py  materials.py  remnant.py  schemas.py
backend/app/engine/: bar_cutting.py  bin_nester.py  cut1d.py  sparrow_engine.py
backend/app/geometry/: clean_dxf.py  dxf.py
backend/app/llm/: orchestrator.py  providers.py
backend/app/output/: export.py
backend/app/tools/: registry.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: AmibaProjectBanner.tsx  AmibaPush.tsx  AmibaRegister.tsx  App.tsx  BarCutting.tsx  InteractiveLayout.tsx  LLMConfig.tsx  SheetNesting.tsx  api.ts  geometry.ts  main.tsx  styles.css
phase0/: .gitignore  README.md  requirements.txt
phase0/engines/bin_nester/: Cargo.toml
phase0/engines/bin_nester/src/: main.rs
phase0/samples/: sample_1.dxf  sample_2.dxf  sample_3.dxf
phase0/src/: dxf_io.py  esicup.py  experiment.py  generate_samples.py  nest_baseline.py  nest_nfp.py  nfp.py  run.py  run_sparrow.py
src/: amiba-connector.js  index.js
