[package]
name = "bin_nester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin_nester"
path = "src/main.rs"

[dependencies]
jagua-rs = { version = "0.7.2", features = ["bpp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
